--- a/node-10/src/views/partials/header.ejs
+++ b/node-10/src/views/partials/header.ejs
@@ -22,6 +22,9 @@
             <a class="nav-link" href="/users">Usuarios</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="/roles">Roles</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#">Contactos</a>
           </li>
           <li class="nav-item">
