--- a/node-10/src/views/partials/header.ejs
+++ b/node-10/src/views/partials/header.ejs
@@ -1,4 +1,4 @@
-<header>
+<header class="mb-3">
   <nav class="navbar navbar-expand-sm bg-body-tertiary">
     <div class="container">
       <a class="navbar-brand" href="/">CaC</a>
